# crafting-interpreters

./: .gitignore  CMakeLists.txt  GRAMMAR.md  TODO.md  crafting-interpreters-c.sh  crafting-interpreters-java.sh  pom.xml
src/main/c/: Main.c
src/main/c/crafting-interpreters/: Chunk.c  Compiler.c  Debug.c  DoublyLinkedList.c  Lexer.c  Main.c  Memory.c  VM.c  Value.c
src/main/c/include/crafting-interpreters/: Chunk.h  Common.h  Compiler.h  Debug.h  DoublyLinkedList.h  Lexer.h  Memory.h  VM.h  Value.h
src/main/java/io/portfolio/ewhitaker/: Main.java
src/main/java/io/portfolio/ewhitaker/lox/: AstPrinter.java  Environment.java  ErrorHandler.java  Evaluator.java  Expr.java  Interpreter.java  Lexer.java  Lox.java  LoxCallable.java  LoxClass.java  LoxFunction.java  LoxInstance.java  Node.java  Parser.java  Position.java  Printer.java  Resolver.java  Return.java  RuntimeError.java  Source.java  Stmt.java  Token.java  TokenType.java
src/main/java/io/portfolio/ewhitaker/lox/evaluator/: Evaluator.java
src/main/java/io/portfolio/ewhitaker/lox/lexer/: Lexer.java
src/main/java/io/portfolio/ewhitaker/lox/parser/: Parser.java
src/main/java/io/portfolio/ewhitaker/lox/print/: Printer.java  RPNPrinter.java
src/main/java/io/portfolio/ewhitaker/lox/printer/: Printer.java  RPNPrinter.java
src/main/java/io/portfolio/ewhitaker/tool/: GenerateAst.java
src/main/resources/: script.lox
src/test/java/io/portfolio/ewhitaker/lox/: LexerTest.java
src/test/java/io/portfolio/ewhitaker/lox/lexer/: LexerTest.java
src/test/java/io/portfolio/ewhitaker/util/: Asserts.java
(+5 files in other folders)
